--- a/back-end/liargame/src/main/resources/application.properties
+++ b/back-end/liargame/src/main/resources/application.properties
@@ -49,7 +49,6 @@ spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kak
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
-
 spring.security.oauth2.client.registration.kakao.client-id=b7f2f677a799001df26efe608fba28f4
 spring.security.oauth2.client.registration.kakao.client-secret=ak1eVXgBWt44F6cYwFPHIBF91pqQCNe0
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:5500/public/index.html
@@ -57,8 +56,7 @@ spring.security.oauth2.client.registration.kakao.client-authentication-method=PO
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
-
-spring.security.oauth2.client.registration.client-id=221898714674-m4aacsrc3lah7ac1c4k47jlo8vs43e1f.apps.googleusercontent.com
-spring.security.oauth2.client.registration.client-secret=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
-spring.security.oauth2.client.registration.redirect-uri=http://127.0.0.1:5500/public/index.html
-spring.security.oauth2.client.registration.scope=email,profile
+spring.security.oauth2.client.registration.google.client-id=221898714674-m4aacsrc3lah7ac1c4k47jlo8vs43e1f.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://127.0.0.1:5500/public/index.html
+spring.security.oauth2.client.registration.google.scope=email,profile
