--- a/back-end/liargame/src/main/resources/application.properties
+++ b/back-end/liargame/src/main/resources/application.properties
@@ -60,3 +60,5 @@ spring.security.oauth2.client.registration.google.client-id=221898714674-m4aacsr
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.redirect-uri=http://127.0.0.1:5500/public/index.html
 spring.security.oauth2.client.registration.google.scope=email,profile
+#page 1?? ????
+spring.data.web.pageable.one-indexed-parameters=false
