--- a/back-end/liargame/src/main/resources/application.properties
+++ b/back-end/liargame/src/main/resources/application.properties
@@ -56,9 +56,9 @@ spring.security.oauth2.client.registration.kakao.client-authentication-method=PO
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
-spring.security.oauth2.client.registration.google.client-id=221898714674-m4aacsrc3lah7ac1c4k47jlo8vs43e1f.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://127.0.0.1:5500/public/index.html
+spring.security.oauth2.client.registration.google.client-id=379257368587-calfpqn6bh9ehcfqtd3po48r2ohhpr1l.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/google
 spring.security.oauth2.client.registration.google.scope=email,profile
 #page 1?? ????
 spring.data.web.pageable.one-indexed-parameters=false
