--- a/back-end/liargame/src/main/resources/application.properties
+++ b/back-end/liargame/src/main/resources/application.properties
@@ -22,10 +22,10 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # database(mysql)
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S08P12A706?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.username=root
-spring.datasource.hikari.password=ssafy
+spring.datasource.hikari.username=S08P12A706
+spring.datasource.hikari.password=AFJukcFm6d
 # database(mysql)
 spring.data.mongodb.username=
 spring.data.mongodb.password=
