--- a/back-end/liargame/src/main/resources/application.properties
+++ b/back-end/liargame/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # database(mysql)
-spring.datasource.url=jdbc:mysql://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S08P12A706?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.username=S08P12A706@stg-yswa-kr-practice-db-master.mariadb.database.azure.com
-spring.datasource.hikari.password=AFJukcFm6d
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=ssafy
 # database(mysql)
 spring.data.mongodb.username=
 spring.data.mongodb.password=
