--- a/back-end/liargame/src/main/resources/application.properties
+++ b/back-end/liargame/src/main/resources/application.properties
@@ -55,16 +55,16 @@ spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.co
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 spring.security.oauth2.client.registration.kakao.client-id=1ff9c0d8399e2993bcc0f81a9c899269
 spring.security.oauth2.client.registration.kakao.client-secret=x6mhYRdS6YOfSwF5E9ESS6vCrBxEotvQ
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8081/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://192.168.32.111:8081/kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 spring.security.oauth2.client.registration.google.client-id=379257368587-calfpqn6bh9ehcfqtd3po48r2ohhpr1l.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/google
+spring.security.oauth2.client.registration.google.redirect-uri=http://192.168.32.111:8081/google
 spring.security.oauth2.client.registration.google.scope=email,profile
 #page 1?? ????
 spring.data.web.pageable.one-indexed-parameters=false
-openvidu.hostname=http://localhost:4443
+openvidu.hostname=http://192.168.32.171:4443
 openvidu.secret=MY_SECRET
