--- a/back-end/liargame/src/main/resources/application.properties
+++ b/back-end/liargame/src/main/resources/application.properties
@@ -17,14 +17,19 @@ spring.web.resources.add-mappings=false
 springfox.documentation.swagger.use-model-v3=false
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #jpa
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 # database(mysql)
-spring.datasource.url=mysql://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S08P12A706?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S08P12A706?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.username=S08P12A706@stg-yswa-kr-practice-db-master.mariadb.database.azure.com
+#spring.datasource.hikari.username=root
 spring.datasource.hikari.password=AFJukcFm6d
+#spring.datasource.hikari.password=ssafy
+#??
 #spring.datasource.url=jdbc:mysql://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S08P12A706?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.hikari.username=S08P12A706@stg-yswa-kr-practice-db-master.mariadb.database.azure.com
@@ -55,17 +60,19 @@ spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.co
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 spring.security.oauth2.client.registration.kakao.client-id=1ff9c0d8399e2993bcc0f81a9c899269
 spring.security.oauth2.client.registration.kakao.client-secret=x6mhYRdS6YOfSwF5E9ESS6vCrBxEotvQ
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8081/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://i8a706.p.ssafy.io:8081/kakao
+#spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8081/kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 spring.security.oauth2.client.registration.google.client-id=379257368587-calfpqn6bh9ehcfqtd3po48r2ohhpr1l.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/google
+#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://i8a706.p.ssafy.io:8081/google
 spring.security.oauth2.client.registration.google.scope=email,profile
 #page 1?? ????
 spring.data.web.pageable.one-indexed-parameters=false
-#openvidu.hostname=http://localhost:4443
-openvidu.hostname=http://192.168.91.171:4443
+openvidu.hostname=https://localhost:4443
+#openvidu.hostname=http://192.168.91.171:4443
 openvidu.secret=MY_SECRET
