--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "event-source-polyfill": "^1.0.31",
+    "lodash": "^4.17.21",
     "mdb-ui-kit": "^6.1.0",
     "openvidu-browser": "^2.25.0",
     "polyfill": "^0.1.0",
